fix: fix adaptive layout issues

--- a/src/components/CustomFieldsContainer/CustomFieldsContainer.module.scss
+++ b/src/components/CustomFieldsContainer/CustomFieldsContainer.module.scss
@@ -3,10 +3,18 @@
 .label {
   width: 30%;
   font-weight: $fontWeightBold;
+
+  @media (max-width: 575px) {
+    width: 100%;
+  }
 }
 
 .fieldValue {
   width: 70%;
+
+  @media (max-width: 575px) {
+    width: 100%;
+  }
 }
 
 .textarea {
