--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -75,7 +75,7 @@
   @media (max-width: 1080px) {
     width: calc(100vw - 15px);
     justify-content: end;
-    padding-right: 15px;
+    padding: 0 10px;
   }
 
   @media (max-width: 576px) {
