--- a/src/components/ItemCard/ItemCard.module.scss
+++ b/src/components/ItemCard/ItemCard.module.scss
@@ -5,6 +5,16 @@
   transition: $themeTransition;
   background-color: var(--background-primary-color);
   border-color: var(--lines-color);
+  position: relative;
+}
+
+.dropdown {
+  position: absolute;
+  right: 0;
+
+  @media (max-width: 767px) {
+    top: 270px;
+  }
 }
 
 .cardBody {
@@ -12,11 +22,17 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  @media (max-width: 767px) {
+    margin-left: 0;
+    margin-top: 270px;
+  }
 }
 
 .title {
   font-size: $fontSizeH3;
   margin-bottom: 0;
+  padding-right: 40px;
 }
 
 .subtitle {
@@ -30,6 +46,10 @@
   &:hover {
     color: var(--text-color-light);
     opacity: $hoverOpacity;
+  }
+
+  @media (max-width: 767px) {
+    display: block;
   }
 }
 
@@ -58,6 +78,14 @@
   height: 100%;
   width: 200px;
   border-radius: var(--bs-card-inner-border-radius) 0 0 var(--bs-card-inner-border-radius);
+  position: absolute;
+
+  @media (max-width: 767px) {
+    height: 270px;
+    width: 100%;
+    border-radius: var(--bs-card-inner-border-radius) var(--bs-card-inner-border-radius) 0
+      0;
+  }
 }
 
 .image {
